--- a/Eksamen/studyhelp/client/package.json
+++ b/Eksamen/studyhelp/client/package.json
@@ -14,6 +14,7 @@
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "dependencies": {
+    "socket.io-client": "^4.8.1",
     "standard": "^17.1.2",
     "svelte-routing": "^2.13.0",
     "toastr": "^2.1.4"
