--- a/Eksamen/studyhelp/server/package.json
+++ b/Eksamen/studyhelp/server/package.json
@@ -8,6 +8,7 @@
   "start": "node app.js",
   "init_db": "node db/database.js",
   "seed_db": "node db/database.js seed",
+  "init_clear": "node db/database.js clear",
   "build frontend": "cd ../frontend && npm run build"
 },
   "keywords": [],
