--- a/Eksamen/studyhelp/server/package.json
+++ b/Eksamen/studyhelp/server/package.json
@@ -9,7 +9,7 @@
   "init_db": "node db/database.js",
   "seed_db": "node db/database.js seed",
   "init_clear": "node db/database.js clear",
-  "build frontend": "cd ../frontend && npm run build"
+  "build_frontend": "cd ../client && npm run build"
 },
   "keywords": [],
   "author": "",
